syntax = "proto3";

package com.example.grpcproto;

option java_multiple_files = true;

service UserService {
  rpc GetUserById(UserRequest) returns (UserResponse);
}

message UserRequest {
  string userId = 1;
}

message UserResponse {
  string responseMessage = 1;
}
